# RBV-Downloader

./: LICENSE  README.md  pyproject.toml  rbv-dl.py
ignore/: main.py
src/: cli.py  main.py
src/core/: __init__.py  api_engine.py  auth.py  browser.py  interceptor.py  network.py  pdf_engine.py
src/utils/: __init__.py  helper.py  logger.py  progress.py  scraper.py
